update custom home